# exclurad-mcp

./: .gitignore  README.md  environment.yml  pyproject.toml
benchmarks/: eta_regression.py  score_agent_run.py  seeded_failure_detection.py  verify_task_ground_truth.py
benchmarks/2026-07-21-eta-regression/: report.md  results.json
benchmarks/2026-07-21-seeded-failure/: report.md  results.json
benchmarks/agent_tasks/: PROTOCOL.md  tasks.json
corpus/: eta-paper-2026.md  exclurad-bibliography.md
demo/failure-map/: README.md  failure_heatmap.py  plotwright_heatmap_regen.py  wq2_coverage_cells.csv
demo/plotwright-chain/: README.md  delta_vs_w_slice.csv  plotwright_line_regen.py  render_chain.py
docs/: benchmark-plan.md  open-source-stack.md
slurm-lanl/: README.md  ROCINANTE_RUNBOOK.md  exclurad_node_parallel.sbatch  exclurad_node_task.sh  gen_rocinante_inputs.py
src/exclurad_mcp/: __init__.py  buildgen.py  channels.py  inputgen.py  outputs.py  runner.py  server.py  tables.py  validators.py
src/exclurad_mcp/templates/: exclurad.F.template  mpintp.inc.template  slots.json
tests/: test_buildgen.py  test_outputs.py  test_validators.py
