[project]
name = "exclurad-mcp"
version = "0.1.0"
description = "MCP server for pre-flight validation, input generation, and execution of the EXCLURAD radiative-corrections code"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Izzy Illari" }]
dependencies = ["mcp>=1.2"]

[project.scripts]
exclurad-mcp = "exclurad_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exclurad_mcp"]
